# threadbare-app

./: .gitignore  README.md  SPEC.md  pyproject.toml
src/threadbare/: cli.py  events.py  fold.py  ids.py  log.py  notation.py  render.py  server.py
src/threadbare/static/: app.js  core.js  index.html  style.css
tests/: conftest.py  frontend_core.test.mjs  test_cli.py  test_fold.py  test_ids.py  test_log.py  test_notation.py  test_render.py  test_server.py
