[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threadbare"
version = "0.1.0"
description = "Personal memory / networking app — append-only log, fold, CLI"
requires-python = ">=3.11"

[project.scripts]
app = "threadbare.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
